<resources>
    <string name="air_quality">Air quality</string>
    <string name="aqi_with_unit">Air quality (%1$s)</string>
    <string name="aqi">Air quality</string>
    <string name="temperature_with_unit">Temperature (%1$s)</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="relative_humidity">Relative humidity</string>
    <string name="rel_humidity">Rel. humidity</string>
    <string name="absolute_humidity">Absolute humidity</string>
    <string name="abs_humidity">Abs. humidity</string>
    <string name="dewpoint">Dew point</string>
    <string name="dewpoint_with_unit">Dew point (%1$s)</string>
    <string name="pressure">Air pressure</string>
    <string name="air_pressure">Air pressure</string>
    <string name="pressure_with_unit">Air pressure (%1$s)</string>
    <string name="carbon_dioxide">Carbon dioxide</string>
    <string name="co2">CO₂</string>
    <string name="co2_with_unit">CO₂ (%1$s)</string>
    <string name="voc_index">VOC index</string>
    <string name="volatile_organic_compounds">Volatile organic compounds index</string>
    <string name="voc_with_unit">VOC index (%1$s)</string>
    <string name="nox_index">NOx index</string>
    <string name="nitrogen_oxides">Nitrogen oxides index</string>
    <string name="nox_with_unit">NOx index (%1$s)</string>
    <string name="luminosity">Light level</string>
    <string name="light">Light</string>
    <string name="luminosity_with_unit">Light (%1$s)</string>
    <string name="particulate_matter_10">Particulate matter 1</string>
    <string name="pm10">PM1</string>
    <string name="particulate_matter_25">Particulate matter 2.5</string>
    <string name="pm25">PM2.5</string>
    <string name="pm">PM</string>
    <string name="particulate_matter_40">Particulate matter 4</string>
    <string name="pm40">PM4</string>
    <string name="particulate_matter_100">Particulate matter 10</string>
    <string name="pm100">PM10</string>
    <string name="pm10_with_unit">PM1 (%1$s)</string>
    <string name="pm25_with_unit">PM2.5 (%1$s)</string>
    <string name="pm40_with_unit">PM4 (%1$s)</string>
    <string name="pm100_with_unit">PM10 (%1$s)</string>
    <string name="movement_counter">Movement counter</string>
    <string name="movements">Movements</string>
    <string name="battery_voltage">Battery voltage</string>
    <string name="battery">Battery</string>
    <string name="acceleration_x">Acceleration X</string>
    <string name="acceleration_y">Acceleration Y</string>
    <string name="acceleration_z">Acceleration Z</string>
    <string name="acc_x">Acc. X</string>
    <string name="acc_y">Acc. Y</string>
    <string name="acc_z">Acc. Z</string>
    <string name="acceleration">Acceleration</string>
    <string name="signal_strength">Signal strength</string>
    <string name="signal_strength_rssi">Signal strength (RSSI)</string>
    <string name="signal_strength_dbm">Signal strength (dBm)</string>
    <string name="measurement_sequence_number">Measurement sequence number</string>
    <string name="meas_seq_number">Meas. seq. number</string>
    <string name="sound">Sound</string>
    <string name="sound_avg">Sound (average)</string>
    <string name="sound_peak">Sound (peak)</string>
    <string name="sound_instant">Sound (instant)</string>
    <string name="unit_pm10">µg/m³</string>
    <string name="unit_pm25">µg/m³</string>
    <string name="unit_pm40">µg/m³</string>
    <string name="unit_pm100">µg/m³</string>
    <string name="unit_co2">ppm</string>
    <string name="unit_voc">VOC</string>
    <string name="unit_nox">NOx</string>
    <string name="unit_sound">dBA</string>
    <string name="unit_luminosity">lx</string>
    <string name="done">Done</string>
    <string name="confirm">Confirm</string>
    <string name="remove">Remove</string>
    <string name="no_data_10_days">No data during the last 10 days</string>
    <string name="error">Error</string>
    <string name="date">Date</string>
    <string name="language_english">English</string>
    <string name="language_finnish">Suomi</string>
    <string name="language_swedish">Svenska</string>
    <string name="language_french">Français</string>
    <string name="language_polish">Polski</string>
    <string name="settings_language">Language</string>
    <string name="gatt_please_wait">Sometimes the history download is slow due to the Bluetooth connectivity. Please wait a moment.</string>
    <string name="gatt_abort_download">Abort download</string>
    <string name="tag_name">Name</string>
    <string name="data_format">Data format</string>
    <string name="tx_power">Tx power</string>
    <string name="data_received_via">Data received via</string>
    <string name="advertisement">Advertisement</string>
    <string name="cloud">Cloud</string>
    <string name="alarm_custom_title_hint">Set custom description...</string>
    <string name="alarm_custom_description_title">Alert custom description</string>
    <string name="firmware">Firmware</string>
    <string name="current_version">Current version</string>
    <string name="firmware_very_old">Very old</string>
    <string name="firmware_update">Update</string>
    <string name="add_tag_not_found">No sensors found</string>
    <string name="add_tag_title">Nearby Ruuvi sensors</string>
    <string name="ago">ago</string>
    <string name="alarm_notification_disable">Disable this alarm</string>
    <string name="alert_movement">Movement</string>
    <string name="alert_movement_description">Movement alert is triggered if the value of the sensor\'s internal motion counter changes. This alert can be used, for example, to detect door movement or vibration in the vicinity of the sensor.</string>
    <string name="alert_notification_humidity_high">Humidity too high!</string>
    <string name="alert_notification_humidity_low">Humidity too low!</string>
    <string name="alert_notification_movement">Movement detected!</string>
    <string name="alert_notification_pressure_high">Pressure too high!</string>
    <string name="alert_notification_pressure_low">Pressure too low!</string>
    <string name="alert_notification_rssi_high">Signal strength too high!</string>
    <string name="alert_notification_rssi_low">Signal strength too low!</string>
    <string name="alert_notification_temperature_high">Temperature too high!</string>
    <string name="alert_notification_temperature_low">Temperature too low!</string>
    <string name="alert_subtitle_off">Off</string>
    <string name="alert_subtitle_on">Alert when less than %1$s or more than %2$s</string>
    <string name="alerts">Alerts</string>
    <string name="background_image">Background image</string>
    <string name="background_notification_message">You can disable background scanning in settings</string>
    <string name="background_notification_scanning_every">Scanning every</string>
    <string name="calibrate">Calibrate</string>
    <string name="calibrated">Calibrated: %1$s</string>
    <string name="calibration_done">Calibration done!</string>
    <string name="calibration_hint">%1$d%% -> 75%%</string>
    <string name="calibration_humidity">In order to measure relative humidity as accurately as possible, a sodium chloride (salt) calibration is recommended. See video tutorials on how to easily do this at home.</string>
    <string name="calibration_humidity_button">Calibrate hygrometer</string>
    <string name="calibration_humidity_disclaimer">Note that calibration data will be stored locally in your mobile device. After Ruuvi Station uninstall and install, you may need to recalibrate.</string>
    <string name="calibration_humidity_link">video tutorials</string>
    <string name="calibration_humidity_link_url">https://www.youtube.com/results?search_query=hygrometer+salt+calibration</string>
    <string name="camera">Camera</string>
    <string name="camera_fail">Could not start camera</string>
    <string name="cancel">Cancel</string>
    <string name="charts_background_dialog_description">Charts feature works best with background scanning enabled.</string>
    <string name="charts_background_dialog_title_question">Would you like to enable Bluetooth background scanning?</string>
    <string name="clear">Clear</string>
    <string name="clear_confirm">Clear the local history data from the app?</string>
    <string name="close">Close</string>
    <string name="connected_reading_info">Synchronising...</string>
    <string name="connecting">Connecting...</string>
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_description">Use dashboard view to see multiple sensors at a glance.</string>
    <string name="dashboard_empty">Your dashboard \nis empty</string>
    <string name="data_points_read">%1$,d measurements read, saving..</string>
    <string name="disconnected">Disconnected</string>
    <string name="export">EXPORT</string>
    <string name="file_not_supported">File type not supported</string>
    <string name="gallery">Gallery</string>
    <string name="data_forwarding_disabled">Disabled</string>
    <string name="data_forwarding_url">Data forwarding URL</string>
    <string name="data_forwarding_url_hint">https://your.gateway/...</string>
    <string name="data_forwarding_during_sync_enable">Forward data while syncing (beta)</string>
    <string name="h">h</string>
    <string name="help_about_text">Ruuvi Station is an easy-to-use application that allows you to monitor the measurement data of Ruuvi sensors.</string>
    <string name="help_about_title">About / Help</string>
    <string name="help_added_tags">Added sensors: %1$,d</string>
    <string name="help_db_data_points">Number of locally stored measurements: %1$,d</string>
    <string name="help_db_size">Database size: %1$,d kB</string>
    <string name="help_more_to_read_text">Ruuvi\'s website: ruuvi.com\nRuuvi Forum: f.ruuvi.com\nRuuvi blog: ruuvi.com/blog\nRuuvi on Twitter: twitter.com/ruuvicom</string>
    <string name="menu_about_help">About / Help</string>
    <string name="menu_add_new_sensor">Add a new sensor</string>
    <string name="menu_app_settings">App settings</string>
    <string name="menu_buy_sensors">Buy Ruuvi sensors</string>
    <string name="menu_send_feedback">Send feedback</string>
    <string name="ok">OK</string>
    <string name="settings_gateway_details">When you add a URL here, the app will execute an HTTP POST with the linked sensors when it does background scanning. \n\nFor more info, check the documentation.</string>
    <string name="settings_gateway_device_identifier">Device identifier</string>
    <string name="settings_data_forwarding_test">Test data forwarding</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_check_email">We\'ve sent a one-time password to your email %1$s. Sign in by entering it here:</string>
    <string name="sign_out_confirm">When you sign out, sensors the ownerships of which you\'ve claimed on the sensor settings page will be automatically removed from the app. When you sign in again using the same email address, the sensors will be returned from the cloud.\n\nDo you want to sign out?</string>
    <string name="login_to_ruuvi_network">Sign in to\nRuuvi\nStation</string>
    <string name="skip">SKIP</string>
    <string name="synchronizing">Synchronising</string>
    <string name="data_forwarding_location_enable">Also send location coordinates of this device</string>
    <string name="app_theme">App theme</string>
    <string name="follow_system_theme">System theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="add_sensor_description">This page shows nearby Ruuvi sensors not yet added to the app. Tap a sensor to add it.</string>
    <string name="add_sensor_via_nfc">Alternatively, if your NFC is enabled, you can add a sensor using NFC by touching it with your phone.</string>
</resources>