<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/mainGroup" android:checkableBehavior="none">
        <item
            android:id="@+id/addNewSensorMenuItem"
            android:title="@string/menu_add_new_sensor" />
        <item
            android:id="@+id/appSettingsMenuItem"
            android:title="@string/menu_app_settings" />
        <item
            android:id="@+id/aboutMenuItem"
            android:title="@string/menu_about_help" />
        <item
            android:id="@+id/sendFeedbackMenuItem"
            android:title="@string/menu_send_feedback" />
        <item
            android:id="@+id/getMoreSensorsMenuItem"
            android:title="@string/menu_get_more_sensors" />
        <item
            android:id="@+id/loginMenuItem"
            android:title="@string/sign_in" />
    </group>
</menu>