<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/screenEnd"
    android:paddingStart="@dimen/screenStart"
    android:paddingBottom="@dimen/screenBottom"
    android:paddingTop="@dimen/screenTop"
    android:orientation="vertical">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dashboardSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        style="@style/SwitchStyle.WithPadding"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_description"
        style="@style/ParagraphSmall"/>

    <TextView
        android:id="@+id/darkModeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_theme"
        android:paddingTop="@dimen/big"
        style="@style/Subtitle.WithPadding"
        />

    <RadioGroup
        android:id="@+id/darkModeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/followSystemThemeRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Paragraph.WithPadding"
            android:text="@string/follow_system_theme" />

        <RadioButton
            android:id="@+id/darkThemeRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Paragraph.WithPadding"
            android:text="@string/dark_theme" />

        <RadioButton
            android:id="@+id/lightThemeRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Paragraph.WithPadding"
            android:text="@string/light_theme" />

    </RadioGroup>


</LinearLayout>