<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.ui.AppSettingsDataForwardingFragment"
    android:paddingEnd="@dimen/screenEnd"
    android:paddingStart="@dimen/screenStart"
    android:paddingBottom="@dimen/screenBottom"
    android:paddingTop="@dimen/screenTop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/gatewayUrlTitleTextView"
                    style="@style/Subtitle.WithPadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/data_forwarding_url" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/gatewayUrlEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/data_forwarding_url_hint"
                    android:maxLength="255"
                    android:maxLines="1"
                    android:inputType="textNoSuggestions"
                    style="@style/Input" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/deviceIdTitleTextView"
                    style="@style/Subtitle.WithPadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_gateway_device_identifier" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/deviceIdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="32"
                    android:maxLines="1"
                    android:inputType="textNoSuggestions"
                    style="@style/Input"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/locationSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SwitchStyle.WithPadding"
                    android:text="@string/data_forwarding_location_enable"
                    />
                
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/forwardingDuringSyncSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SwitchStyle.WithPadding"
                    android:text="@string/data_forwarding_during_sync_enable"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/gatewayTestButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_data_forwarding_test"
                    style="@style/RoundButton"
                    android:layout_marginTop="@dimen/extended"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/gatewayTestResultTextView"
                    style="@style/ParagraphSmall.WithPadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/settingsInfoTextView"
                    android:text="@string/settings_gateway_details"
                    android:layout_marginTop="16dp"
                    style="@style/Paragraph.WithPadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        </LinearLayout>
</ScrollView>