<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".network.ui.SignOutFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/confirmTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out_confirm"
        android:layout_marginTop="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/roundButton"
        app:layout_constraintTop_toBottomOf="@+id/confirmTextView"
        app:layout_constraintLeft_toLeftOf="@+id/confirmTextView"
        app:layout_constraintRight_toLeftOf="@+id/cancelButton"
        android:text="@string/ok"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/roundButton"
        app:layout_constraintTop_toBottomOf="@+id/confirmTextView"
        app:layout_constraintRight_toRightOf="@+id/confirmTextView"
        app:layout_constraintLeft_toRightOf="@+id/okButton"
        android:text="@string/cancel"
        />

</androidx.constraintlayout.widget.ConstraintLayout>