<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tag_layout"
    android:background="?android:attr/colorBackground"
    tools:context="com.ruuvi.station.addtag.ui.AddTagActivity"
    tools:showIn="@layout/activity_add_tag">

    <LinearLayout
        android:id="@+id/instructionsLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/addSenSorDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ParagraphSmall"
            android:padding="@dimen/extended"
            app:layout_constraintTop_toBottomOf="@id/tagListView"
            android:text="@string/add_sensor_description"
            />

        <TextView
            android:id="@+id/nfcHintTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ParagraphSmall"
            android:paddingHorizontal="@dimen/extended"
            android:paddingBottom="@dimen/extended"
            app:layout_constraintTop_toBottomOf="@id/tagListView"
            android:text="@string/add_sensor_via_nfc"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="?attr/colorDivider"
            app:layout_constraintTop_toBottomOf="@+id/tagListView"/>

    </LinearLayout>

    <ListView
        android:id="@+id/tagListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="?attr/colorDivider"
        android:footerDividersEnabled="true"
        android:dividerHeight="@dimen/divider"
        app:layout_constraintTop_toBottomOf="@+id/instructionsLinearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <LinearLayout
        android:id="@+id/noSensorsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    <TextView
        android:id="@+id/noTagsFoundTextView"
        android:text="@string/add_tag_not_found"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Title"/>

        <Button
            android:id="@+id/buySensorsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_buy_sensors"
            android:layout_marginTop="@dimen/button_bottom_padding"
            android:layout_gravity="center"
            style="@style/RoundButton" />

    </LinearLayout>

    <Button
        android:id="@+id/buySensorsButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_buy_sensors"
        android:layout_marginBottom="@dimen/button_bottom_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/RoundButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
