<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alarm_layout"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="@dimen/tag_settings_text_padding"
    android:animateLayoutChanges="true">
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/alertSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperature_with_unit"
        style="@style/SwitchStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/alertSubtitleTextView"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:paddingBottom="@dimen/tag_settings_text_padding"
        android:text="@string/alert_subtitle_off"
        style="@style/ParagraphSmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alertSwitch" />

    <TextView
        android:id="@+id/mutedTextView"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginEnd="64dp"
        android:drawablePadding="2dp"
        android:visibility="gone"
        tools:visibility="visible"
        tools:text="19:40"
        style="@style/ParagraphSmall"
        app:layout_constraintTop_toTopOf="@+id/alertSwitch"
        app:layout_constraintBottom_toBottomOf="@+id/alertSwitch"
        app:layout_constraintEnd_toEndOf="@+id/alertSwitch"
        app:drawableStartCompat="@drawable/ic_muted_notifications" />

    <TextView
        android:id="@+id/alertMinValueTextView"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="-"
        style="@style/ParagraphSmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alertSubtitleTextView"
        tools:text="100" />

    <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
        android:id="@+id/alertSeekBar"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="0dp"
        style="@style/RangeSeekStyle"
        app:data_type="_integer"
        app:gap="1"
        app:layout_constraintStart_toStartOf="@id/alertMinValueTextView"
        app:layout_constraintEnd_toEndOf="@id/alertMaxValueTextView"
        app:layout_constraintTop_toBottomOf="@id/alertSubtitleTextView" />

    <TextView
        android:id="@+id/alertMaxValueTextView"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="-"
        style="@style/ParagraphSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alertSubtitleTextView"
        tools:text="1000" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/customDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Input"
        app:layout_constraintTop_toBottomOf="@id/alertSeekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/alarm_custom_title_hint"
        android:maxLength="100"
        android:inputType="textCapSentences"
        />

</merge>